# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")
import("//foundation/multimedia/image_framework/ide/image_decode_config.gni")
import("//third_party/flutter/flutter_config.gni")

ohos_shared_library("jpegplugin") {
  sources = [
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libjpegplugin/src/exif_info.cpp",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libjpegplugin/src/icc_profile_info.cpp",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libjpegplugin/src/jpeg_decoder.cpp",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libjpegplugin/src/jpeg_utils.cpp",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libjpegplugin/src/plugin_export.cpp",
  ]

  cflags = [
    "-DIMAGE_DEBUG_FLAG",
    "-DIMAGE_COLORSPACE_FLAG",
  ]

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/plugins/manager/include/image",
    "//foundation/multimedia/image_framework/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libjpegplugin/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/flutter/skia/third_party/externals/libjpeg-turbo",
    "//third_party/flutter/skia/include/codec",
    "//third_party/flutter/skia",
    "//third_party/flutter/skia/include/core",
    "//third_party/flutter/skia/third_party/libjpeg-turbo",
    "//third_party/flutter/skia/third_party/externals/libjpeg-turbo",
    "//third_party/flutter/skia/third_party/skcms",
    "//third_party/libexif",
  ]

  if (use_mingw_win) {
    defines = image_decode_windows_defines
    include_dirs += [
      "//foundation/multimedia/image_framework/mock/native/include",
      "//third_party/flutter/skia/third_party/libjpeg-turbo",
      "//third_party/flutter/skia/third_party/externals/libjpeg-turbo",
    ]
    deps = [
      "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
      "//foundation/multimedia/image_framework/interfaces/innerkits:image_static",
      "//foundation/multimedia/image_framework/mock/native:utils_mock_static",
      "//foundation/multimedia/image_framework/plugins/manager:pluginmanager_static",
      "//third_party/flutter/build/libjpeg:ace_libjpeg",
      "//third_party/flutter/build/skia:ace_skcms",
      "//third_party/flutter/build/skia:ace_skia_ohos",
      "//third_party/libexif:libexif",
    ]
  } else if (use_clang_mac) {
    defines = image_decode_mac_defines
    include_dirs += [
      "//foundation/multimedia/image_framework/mock/native/include",
      "//third_party/flutter/skia/third_party/libjpeg-turbo",
      "//third_party/flutter/skia/third_party/externals/libjpeg-turbo",
    ]
    deps = [
      "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
      "//foundation/multimedia/image_framework/interfaces/innerkits:image_static",
      "//foundation/multimedia/image_framework/mock/native:utils_mock_static",
      "//foundation/multimedia/image_framework/plugins/manager:pluginmanager_static",
      "//third_party/flutter/build/libjpeg:ace_libjpeg",
      "//third_party/flutter/build/skia:ace_skcms",
      "//third_party/flutter/build/skia:ace_skia_ohos",
      "//third_party/libexif:libexif",
    ]
  } else {
    defines = [ "DUAL_ADAPTER" ]
    DUAL_ADAPTER = true
    include_dirs += [ "//commonlibrary/c_utils/base/include" ]
    sources += [
      "$flutter_root/skia/third_party/externals/libjpeg-turbo/jdicc.c",
      "//foundation/multimedia/image_framework/plugins/common/libs/image/libjpegplugin/src/jpeg_encoder.cpp",
    ]
    deps = [
      #"//third_party/flutter/skia/third_party/libjpeg-turbo:libjpeg",
      "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
      "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
      "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
      "//third_party/flutter/build/libjpeg:ace_libjpeg",
      "//third_party/flutter/build/skia:ace_skcms",
      "//third_party/flutter/build/skia:ace_skia_ohos",
      "//third_party/libexif:libexif",
    ]

    if (DUAL_ADAPTER) {
    } else {
      deps += [
        "//third_party/flutter/build/libjpeg:ace_libjpeg",
        "//third_party/libexif:libexif",
      ]
      include_dirs += [
        "//third_party/flutter/skia/third_party/libjpeg-turbo",
        "//third_party/flutter/skia/third_party/externals/libjpeg-turbo",
      ]
    }

    external_deps = [
      "c_utils:utils",
      "hiviewdfx_hilog_native:libhilog",
    ]
  }

  part_name = "multimedia_image_standard"

  subsystem_name = "multimedia"
}

ohos_prebuilt_etc("jpegpluginmetadata") {
  source = "jpegplugin.pluginmeta"
  relative_install_dir = "multimediaplugin/image"
  subsystem_name = "multimedia"
  part_name = "multimedia_image_standard"
}
