# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "multimedia_image/plugins"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/plugins/manager/test/unittest/common/plugin_example/interface/vision",
  ]
}

##############################unittest##########################################
ohos_unittest("PluginManagerTest") {
  module_out_path = module_output_path

  sources = [ "//foundation/multimedia/image_framework/plugins/manager/test/unittest/common/plugin_manager_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//foundation/multimedia/image_framework/plugins/manager/test/unittest/common/plugin_example/plugin_example1:pluginexample1",
    "//foundation/multimedia/image_framework/plugins/manager/test/unittest/common/plugin_example/plugin_example2:pluginexample2",
    "//foundation/multimedia/image_framework/plugins/manager/test/unittest/common/plugin_example/plugin_example3:pluginexample3",
    "//third_party/googletest:gtest_main",
  ]

  resource_config_file = "//foundation/multimedia/image_framework/test/resource/plugins/ohos_test.xml"
}

###############################################################################
group("unittest") {
  testonly = true

  deps = [ ":PluginManagerTest" ]
}
###############################################################################
