# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("pluginexample1") {
  sources = [
    "//foundation/multimedia/image_standard/plugins/manager/test/unittest/common/plugin_example/plugin_example1/cloud_label_detector.cpp",
    "//foundation/multimedia/image_standard/plugins/manager/test/unittest/common/plugin_example/plugin_example1/label_detector.cpp",
    "//foundation/multimedia/image_standard/plugins/manager/test/unittest/common/plugin_example/plugin_example1/plugin_export.cpp",
  ]

  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_standard/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_standard/plugins/manager/include",
    "//foundation/multimedia/image_standard/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_standard/plugins/manager/test/unittest/common/plugin_example/interface/vision",
  ]

  deps = [
    "//base/hiviewdfx/hilog/frameworks/native:libhilogutil",
    "//foundation/multimedia/image_standard/plugins/manager:pluginmanager",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_image"
}
